--- a/PC/package.json
+++ b/PC/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base-v3t",
+  "name": "IM",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --mode development",
@@ -17,21 +17,22 @@
     "@wangeditor/editor": "5.1.23",
     "@wangeditor/editor-for-vue": "5.1.12",
     "amfe-flexible": "^2.2.1",
-		"tailwindcss": "^3.0.24",
     "axios": "^0.24.0",
     "consola": "^3.2.3",
     "crypto-js": "^4.1.1",
-		"driver.js": "^0.9.8",
+    "driver.js": "^0.9.8",
     "element-plus": "^2.4.0",
     "form-designer-plus": "^0.0.5",
     "highlight.js": "^11.9.0",
     "i18n": "^0.15.1",
     "js-cookie": "^3.0.5",
+    "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
     "postcss-pxtorem": "^6.0.0",
     "qs": "^6.11.2",
+    "tailwindcss": "^3.0.24",
     "vditor": "^3.8.8",
     "vfonts": "^0.1.0",
     "vue": "^3.2.47",
