--- a/PC/package.json
+++ b/PC/package.json
@@ -14,6 +14,7 @@
     "@chenfengyuan/vue-qrcode": "^2.0.0",
     "@element-plus/icons-vue": "^2.0.10",
     "@highlightjs/vue-plugin": "^2.1.0",
+    "@vueuse/core": "^8.4.2",
     "@wangeditor/editor": "5.1.23",
     "@wangeditor/editor-for-vue": "5.1.12",
     "amfe-flexible": "^2.2.1",
@@ -24,8 +25,10 @@
     "element-plus": "^2.4.0",
     "form-designer-plus": "^0.0.5",
     "highlight.js": "^11.9.0",
+    "pinyin-pro": "^3.10.2",
     "i18n": "^0.15.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
@@ -36,6 +39,7 @@
     "vditor": "^3.8.8",
     "vfonts": "^0.1.0",
     "vue": "^3.2.47",
+    "vue-at": "^3.0.0-alpha.2",
     "vue-i18n": "^9.5.0",
     "vue-router": "4",
     "wangeditor": "^4.7.15"
