--- a/PC/package.json
+++ b/PC/package.json
@@ -19,13 +19,13 @@
     "@wangeditor/editor-for-vue": "5.1.12",
     "amfe-flexible": "^2.2.1",
     "axios": "^0.24.0",
+    "benz-amr-recorder": "^1.1.5",
     "consola": "^3.2.3",
     "crypto-js": "^4.1.1",
     "driver.js": "^0.9.8",
     "element-plus": "^2.4.0",
     "form-designer-plus": "^0.0.5",
     "highlight.js": "^11.9.0",
-    "pinyin-pro": "^3.10.2",
     "i18n": "^0.15.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -33,6 +33,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
+    "pinyin-pro": "^3.10.2",
     "postcss-pxtorem": "^6.0.0",
     "qs": "^6.11.2",
     "tailwindcss": "^3.0.24",
