--- a/PC/.env.development
+++ b/PC/.env.development
@@ -8,13 +8,13 @@ VITE_OPEN = true
 ENV = 'development'
 
 # ADMIN 服务地址
-VITE_API_URL = https://imapi.iloveclub.vip
+VITE_API_URL = https://imapi.girlxinh.shop
 
 
 # 阿里云空间存储地址
 VITE_OSS_ORGNAME = iloveclub
 
 # 阿里云服务地址
-VITE_OSS_API = https://imgoss.iloveclub.vip
+VITE_OSS_API = https://imgoss.girlxinh.shop'
 
 
